# magicscan-data

./: .gitignore  pyproject.toml
.streamlit/: config.toml
magicscan_data/: Dashboard.py  Data.py
