[tool.poetry]
name = "magicscan-data"
version = "0.1.0"
description = ""
authors = ["Mubaris NK <hello@mubaris.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
st-pages = "^0.4.5"
pymongo = { extras = ["srv"], version = "^4.7.1" }
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
